[IMPROVE] UPLOAD IMAGE FOR TESTS
